--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <button class="button" id="yes">Yes</button>
             <button class="button" id="no">No</button>
         </div>
-        <h1 class="hidden" id="results">OfCourse You Love Me :)</h1>
+        <h1 class="hidden" id="results">OfCourse You Do :)</h1>
     </div>
     <script src="main.js"></script>
 </body>
